--- a/client/app/index.html
+++ b/client/app/index.html
@@ -16,14 +16,9 @@
         html, body {height: 100%; margin: 0; padding: 0}
         body {width: 100%; height: 100%; background: white url(images/loader.gif) no-repeat center center};
     </style>
-    <p>Hello, World!</p>
-    <!-- <script type='text/javascript' src='../steal/steal.js?app,development'></script> -->
+    <!-- <p>Hello, World!</p> -->
+    <script type='text/javascript' src='../steal/steal.js?app/app.js'></script>
 </head>
 <body>
-
-  <!--[if lt IE 7 ]>
-    <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
-    <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
-  <![endif]-->
 </body>
 </html>
