--- a/client/app/test/hello.html
+++ b/client/app/test/hello.html
@@ -16,8 +16,8 @@
         html, body {height: 100%; margin: 0; padding: 0}
         body {width: 100%; height: 100%; background: white url(images/loader.gif) no-repeat center center};
     </style>
-    <script type='text/javascript' src='../steal/steal.js?app/app.js'></script>
 </head>
 <body>
+    <p>Hello, World!</p>
 </body>
 </html>
