Learning to use FuncUnit.

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -16,7 +16,7 @@
         html, body {height: 100%; margin: 0; padding: 0}
         body {width: 100%; height: 100%; background: white url(images/loader.gif) no-repeat center center};
     </style>
-    <script type='text/javascript' src='../steal/steal.js?app/app.js'></script>
+    <script type='text/javascript' src='../steal/steal.js?app/reversi.js'></script>
 </head>
 <body>
 </body>
