--- a/client/app/funcunit.html
+++ b/client/app/funcunit.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="../funcunit/qunit/qunit.css" />
-    <script type='text/javascript' src='../steal/steal.js?app/test/example_test.js'></script>
+    <script type='text/javascript' src='../steal/steal.js?app/test/client_tests.js'></script>
 	<title>Example Test</title>
 </head>
 <body>
