--- a/client/app/funcunit.html
+++ b/client/app/funcunit.html
@@ -2,10 +2,10 @@
 <head>
     <link rel="stylesheet" type="text/css" href="../funcunit/qunit/qunit.css" />
     <script type='text/javascript' src='../steal/steal.js?app/test/client_tests.js'></script>
-	<title>Example Test</title>
+	<title>FuncUnit Tests for Reversi</title>
 </head>
 <body>
-    <h1 id="qunit-header">Example Test Suite</h1>
+    <h1 id="qunit-header">FuncUnit Tests for Reversi</h1>
 	<h2 id="qunit-banner"></h2>
 	<div id="qunit-testrunner-toolbar"></div>
 	<h2 id="qunit-userAgent"></h2>
