Sketching a status display area in the UI.

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -8,8 +8,8 @@
     <link rel="shortcut icon" href="images/favico.png" type="image/x-icon"/>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>App boilerplate</title>
-    <meta name="description" content="App boilerplate">
+    <title>Reversi</title>
+    <meta name="description" content="Reversi">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <style>
         html {overflow: -moz-scrollbars-vertical; overflow-y: scroll;}
